added back telemetry settings
